--- a/css/estilosFormulario.css
+++ b/css/estilosFormulario.css
@@ -35,3 +35,35 @@ a :hover{
 	
 	color:green;
 }
+
+table, td, th{
+	border:1px solid black;
+	
+}
+
+table{
+	width: 50%;
+	border-collapse: collapse;
+}
+
+td, th{
+	
+	width: 100px;
+	height: 30px;
+}
+
+th{
+	
+	text-align:right;
+	vertical-align: top;
+}
+
+td{
+	text-align: left;
+	vertical-align: bottom;
+}
+
+tr:nth-child(odd){
+	
+	bacKground-color: #D1D1D1;
+}
