--- a/parqueecologico/css/estilos.css
+++ b/parqueecologico/css/estilos.css
@@ -4,64 +4,51 @@ body {
 	width: 70%;
 	color: #605B56;
 }
-
-header h1{
+header h1 {
 	padding-left: 10px;
 }
-
-
 #contenido {
 	padding: 10px;
 	background-color: #F9F7F3;
 }
-
 footer {
 	clear: both;
 	border-top: solid 2px #605B56;
 	padding-top: 10px;
 	margin-top: 15px;
 	text-align: center;
+	position: static;
 }
-
 #menu-principal ul {
-float: left;
-width: 200px;
-padding: 0;
-margin: 0;
+	float: left;
+	width: 200px;
+	padding: 0;
+	margin: 0;
 }
-
-#contenido{
-	
+#contenido {
 	margin-left: 200px;
-	
-	
 }
 #contenido p img {
-float: right;
+	float: right;
 	border: 2px solid #605B56;
 	margin: 3px;
 	border-radius: 4px;
-
 }
-
 #menu-principal ul li {
-	
 	list-style-type: none;
 	padding: 10px;
 }
-header{
+header {
 	border-radius: 10px;
 	padding: 3px 10px;
-margin-bottom: 5px;
-	
-	background: -webkit-linear-gradient(left, #5CA861 , #BADFBC);
-background: -o-linear-gradient(right, #5CA861 , #BADFBC);
-background: -moz-linear-gradient(right, #5CA861 , #BADFBC);
-background: linear-gradient(to right, #5CA861 , #BADFBC);
+	margin-bottom: 5px;
+	background: -webkit-linear-gradient(left, #5CA861, #BADFBC);
+	background: -o-linear-gradient(right, #5CA861, #BADFBC);
+	background: -moz-linear-gradient(right, #5CA861, #BADFBC);
+	background: linear-gradient(to right, #5CA861, #BADFBC);
 }
-
 header h1 img {
-	
-		background:url(../../imagenes/etihtml5.png);
+	background: url(../../imagenes/etihtml5.png);
 	border-radius: 6px;
+
 }
